--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -24,4 +25,117 @@
     <img class="about__image" src="img/solar-panel.png">
   </div>
 </section>
+<section class="form">
+  <div class="form__containter">
+    <h1>Оставьте свои <br>контакты</h1>
+    <p>Поможем подобрать модель.<br>
+      Выбрать удобный вариант доставки и установки.<br>
+      Гарантия возврата денег</p>
+        <form>
+        <div class="form__group">
+          <label for="name">Ваше имя</label>
+          <input type="text" placeholder="Введите имя" id="name">
+        </div>
+        <div class="form__group">
+          <label for="email">Электронный адрес</label>
+          <input type="text" placeholder="***@yandex.ru" id="email">
+        </div>
+        <div class="form__group">
+          <label for="phone">Номер телефона</label>
+          <input type="text" placeholder="7 (999) 999-99-99" id="phone">
+        </div>
+        <div class="form__group">
+          <label for="budget">Примерный бюджет</label>
+            <select id="budget">            
+              <option disabled selected>Выберите вариант</option>
+              <option value="10-30">10 000₽ – 30 000₽</option>
+              <option value="30-60">30 000₽ – 60 000₽</option>
+              <option value="60-100">60 000₽ – 100 000₽</option>
+              <option value="100+">100 000₽</option>
+          </select>
+        </div>
+        <button class="form__submit" type="submit">Отправить заявку</button>
+      </form>
+  </div>
+</section>
+<footer>
+  <div class="footer__container">
+      <div class="footer__group">
+        <h3>Позвонить нам:</h3>
+        <div class="footer__links">
+          <a href="tel:74959999999">+7 (495) 999-99-99</a>
+        </div>
+      </div>
+        <div class="footer__group">
+          <h3>Решения для дома:</h3>
+          <div class="footer__links">
+            <a href="#">Солнечные панели GreenRobotic</a>
+            <a href="#">Системы солнечных панелей GreenStation</a>
+          </div>
+        </div>
+        <div class="footer__group">
+          <h3>Компания</h3>
+          <div class="footer__links">
+            <a href="#">Контакты</a>
+            <a href="#">Вакансии</a>
+            <a href="#">СМИ</a>
+          </div>
+        </div>
+  </div>
+  <div class="footer__copyright">
+    <p>GreenCorp © 2021</p>
+  </div>
+</footer>
 </body>
+<!--
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title> 
+</head>
+<body>
+ <form>
+  <div class='field'>
+   <label for='name_in'>Имя: </label>
+   <input type='text' id='name_in'>
+  </div>
+  <div class='field'>
+   <label for='name_in'>Фамилия: </label>
+   <input type='text' id='name_in'>
+  </div>
+  <div class='btns' onsubmit='return false'>
+   <button type='submit' onclick='alert("Форма отправлена");return false'>Отправить</button>
+   <button type="button" onclick='alert("Добрый день!");return false'>Поздороваться</button>
+   <button type="reset">Очистить форму</button>
+  </div>
+ </form>
+ <form>
+  <p>
+    <label for="email">Email:</label>
+    <input id="email" type="email">
+  </p>
+  <p>
+    <label for="password">Пароль:</label>
+    <input id="password" type="password">
+  </p>
+  <p>
+    <label for="remember_me">
+      <input type="checkbox" id="remember_me">
+      Запомнить меня
+    </label>
+  </p>
+  <p>
+    <button type="submit">
+      Войти
+    </button>
+    <button type="reset">
+      Очистить
+    </button>
+  </p>
+</form>
+</body>
+</html>
+-->
